code/HADAD-base/src/main/java/hadad/base/compiler/model/sm/DMLParser.java
// Generated from DML.g4 by ANTLR 4.4

package hadad.base.compiler.model.sm;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__45=1, T__44=2, T__43=3, T__42=4, T__41=5, T__40=6, T__39=7, T__38=8, 
		T__37=9, T__36=10, T__35=11, T__34=12, T__33=13, T__32=14, T__31=15, T__30=16, 
		T__29=17, T__28=18, T__27=19, T__26=20, T__25=21, T__24=22, T__23=23, 
		T__22=24, T__21=25, T__20=26, T__19=27, T__18=28, T__17=29, T__16=30, 
		T__15=31, T__14=32, T__13=33, T__12=34, T__11=35, T__10=36, T__9=37, T__8=38, 
		T__7=39, T__6=40, T__5=41, T__4=42, T__3=43, T__2=44, T__1=45, T__0=46, 
		ID=47, WHITESPACE=48, STRING=49, INT=50, MATRIX=51, ROWS=52, COLS=53, 
		READ=54;
	public static final String[] tokenNames = {
		"<INVALID>", "'t('", "'/'", "'rowMeans('", "'diag('", "'cumprod('", "'mean('", 
		"'colMaxs('", "'cummin('", "'rowSds('", "'det('", "'colVars('", "'||'", 
		"';'", "'colMins('", "'&&'", "'='", "'^'", "'rowSums('", "'sd('", "'colSds('", 
		"'&'", "'var('", "'('", "'*'", "','", "'rowMins('", "'inv('", "'.'", "'sum('", 
		"'%*%'", "'colMeans('", "'FALSE'", "':'", "'cumsum('", "'trace('", "'|'", 
		"'avg('", "'colSums('", "'cummax('", "')'", "'rowMaxs('", "'%/%'", "'+'", 
		"'-'", "'TRUE'", "'rowVars('", "ID", "WHITESPACE", "STRING", "INT", "MATRIX", 
		"ROWS", "COLS", "READ"
	};
	public static final int
		RULE_dmlQuery = 0, RULE_dmlScript = 1, RULE_dmlStatemnet = 2, RULE_source = 3, 
		RULE_dmlMatrixConstruction = 4, RULE_dmlMatrixConstructionMatrixSource = 5, 
		RULE_asMatrix = 6, RULE_asTable = 7, RULE_mName = 8, RULE_header = 9, 
		RULE_flag = 10, RULE_sep = 11, RULE_readMM = 12, RULE_dmlExpression = 13, 
		RULE_viewName = 14, RULE_matrixName = 15, RULE_matrixNameExpression = 16, 
		RULE_numericScalar = 17, RULE_filePath = 18;
	public static final String[] ruleNames = {
		"dmlQuery", "dmlScript", "dmlStatemnet", "source", "dmlMatrixConstruction", 
		"dmlMatrixConstructionMatrixSource", "asMatrix", "asTable", "mName", "header", 
		"flag", "sep", "readMM", "dmlExpression", "viewName", "matrixName", "matrixNameExpression", 
		"numericScalar", "filePath"
	};

	@Override
	public String getGrammarFileName() { return "DML.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DmlQueryContext extends ParserRuleContext {
		public DmlScriptContext dmlScript() {
			return getRuleContext(DmlScriptContext.class,0);
		}
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public DmlQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterDmlQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitDmlQuery(this);
		}
	}

	public final DmlQueryContext dmlQuery() throws RecognitionException {
		DmlQueryContext _localctx = new DmlQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dmlQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); viewName();
			setState(39); match(T__13);
			setState(40); dmlScript();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlScriptContext extends ParserRuleContext {
		public DmlStatemnetContext dmlStatemnet(int i) {
			return getRuleContext(DmlStatemnetContext.class,i);
		}
		public List<DmlStatemnetContext> dmlStatemnet() {
			return getRuleContexts(DmlStatemnetContext.class);
		}
		public DmlScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterDmlScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitDmlScript(this);
		}
	}

	public final DmlScriptContext dmlScript() throws RecognitionException {
		DmlScriptContext _localctx = new DmlScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dmlScript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); dmlStatemnet();
			setState(43); match(T__33);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(44); dmlStatemnet();
				setState(45); match(T__33);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlStatemnetContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public MatrixNameContext matrixName() {
			return getRuleContext(MatrixNameContext.class,0);
		}
		public DmlStatemnetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlStatemnet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterDmlStatemnet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitDmlStatemnet(this);
		}
	}

	public final DmlStatemnetContext dmlStatemnet() throws RecognitionException {
		DmlStatemnetContext _localctx = new DmlStatemnetContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dmlStatemnet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); matrixName();
			setState(53); match(T__30);
			setState(54); source();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public DmlMatrixConstructionContext dmlMatrixConstruction() {
			return getRuleContext(DmlMatrixConstructionContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_source);
		try {
			setState(58);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); dmlMatrixConstruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57); dmlExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlMatrixConstructionContext extends ParserRuleContext {
		public DmlMatrixConstructionMatrixSourceContext dmlMatrixConstructionMatrixSource() {
			return getRuleContext(DmlMatrixConstructionMatrixSourceContext.class,0);
		}
		public DmlMatrixConstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlMatrixConstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterDmlMatrixConstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitDmlMatrixConstruction(this);
		}
	}

	public final DmlMatrixConstructionContext dmlMatrixConstruction() throws RecognitionException {
		DmlMatrixConstructionContext _localctx = new DmlMatrixConstructionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dmlMatrixConstruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); dmlMatrixConstructionMatrixSource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlMatrixConstructionMatrixSourceContext extends ParserRuleContext {
		public AsMatrixContext asMatrix() {
			return getRuleContext(AsMatrixContext.class,0);
		}
		public FlagContext flag() {
			return getRuleContext(FlagContext.class,0);
		}
		public ReadMMContext readMM() {
			return getRuleContext(ReadMMContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode STRING() { return getToken(DMLParser.STRING, 0); }
		public MNameContext mName() {
			return getRuleContext(MNameContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public AsTableContext asTable() {
			return getRuleContext(AsTableContext.class,0);
		}
		public DmlMatrixConstructionMatrixSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlMatrixConstructionMatrixSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterDmlMatrixConstructionMatrixSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitDmlMatrixConstructionMatrixSource(this);
		}
	}

	public final DmlMatrixConstructionMatrixSourceContext dmlMatrixConstructionMatrixSource() throws RecognitionException {
		DmlMatrixConstructionMatrixSourceContext _localctx = new DmlMatrixConstructionMatrixSourceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dmlMatrixConstructionMatrixSource);
		try {
			setState(86);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62); asMatrix();
				setState(63); match(T__23);
				setState(64); asTable();
				setState(65); match(T__23);
				setState(66); mName();
				setState(67); match(T__21);
				setState(68); header();
				setState(69); match(T__30);
				setState(70); flag();
				setState(71); match(T__21);
				setState(72); sep();
				setState(73); match(T__30);
				setState(74); match(STRING);
				setState(75); match(T__6);
				setState(76); match(T__6);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78); asMatrix();
				setState(79); match(T__23);
				setState(80); readMM();
				setState(81); match(T__23);
				setState(82); mName();
				setState(83); match(T__6);
				setState(84); match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsMatrixContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DMLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DMLParser.ID, i);
		}
		public AsMatrixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asMatrix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterAsMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitAsMatrix(this);
		}
	}

	public final AsMatrixContext asMatrix() throws RecognitionException {
		AsMatrixContext _localctx = new AsMatrixContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asMatrix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(ID);
			setState(89); match(T__18);
			setState(90); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsTableContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DMLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DMLParser.ID, i);
		}
		public AsTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterAsTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitAsTable(this);
		}
	}

	public final AsTableContext asTable() throws RecognitionException {
		AsTableContext _localctx = new AsTableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(ID);
			setState(93); match(T__18);
			setState(94); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MNameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(DMLParser.STRING, 0); }
		public MNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterMName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitMName(this);
		}
	}

	public final MNameContext mName() throws RecognitionException {
		MNameContext _localctx = new MNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DMLParser.ID, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlagContext extends ParserRuleContext {
		public FlagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterFlag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitFlag(this);
		}
	}

	public final FlagContext flag() throws RecognitionException {
		FlagContext _localctx = new FlagContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_flag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==T__14 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SepContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DMLParser.ID, 0); }
		public SepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterSep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitSep(this);
		}
	}

	public final SepContext sep() throws RecognitionException {
		SepContext _localctx = new SepContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadMMContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DMLParser.ID, 0); }
		public ReadMMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readMM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterReadMM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitReadMM(this);
		}
	}

	public final ReadMMContext readMM() throws RecognitionException {
		ReadMMContext _localctx = new ReadMMContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_readMM);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlExpressionContext extends ParserRuleContext {
		public DmlExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlExpression; }
	 
		public DmlExpressionContext() { }
		public void copyFrom(DmlExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RowsMeansExperssionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public RowsMeansExperssionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterRowsMeansExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitRowsMeansExperssion(this);
		}
	}
	public static class AtomicExpressionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public AtomicExpressionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterAtomicExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitAtomicExpression(this);
		}
	}
	public static class VarExpressionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public VarExpressionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterVarExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitVarExpression(this);
		}
	}
	public static class ColumnsSumExperssionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public ColumnsSumExperssionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterColumnsSumExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitColumnsSumExperssion(this);
		}
	}
	public static class CumProdExperssionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public CumProdExperssionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterCumProdExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitCumProdExperssion(this);
		}
	}
	public static class ColumnsVarExperssionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public ColumnsVarExperssionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterColumnsVarExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitColumnsVarExperssion(this);
		}
	}
	public static class CumMinExperssionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public CumMinExperssionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterCumMinExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitCumMinExperssion(this);
		}
	}
	public static class MatrixAddExpressionContext extends DmlExpressionContext {
		public DmlExpressionContext left;
		public Token op;
		public DmlExpressionContext right;
		public List<DmlExpressionContext> dmlExpression() {
			return getRuleContexts(DmlExpressionContext.class);
		}
		public DmlExpressionContext dmlExpression(int i) {
			return getRuleContext(DmlExpressionContext.class,i);
		}
		public MatrixAddExpressionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterMatrixAddExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).exitMatrixAddExpression(this);
		}
	}
	public static class RowsMaxsExperssionContext extends DmlExpressionContext {
		public DmlExpressionContext dmlExpression() {
			return getRuleContext(DmlExpressionContext.class,0);
		}
		public RowsMaxsExperssionContext(DmlExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DMLListener ) ((DMLListener)listener).enterRowsMaxsExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
